--- a/components/testimonials.html
+++ b/components/testimonials.html
@@ -4,7 +4,7 @@
         <div class="quotes__item">
             <img src="{{ 'images/quotes.svg' | relative_url }}" alt="quotation mark icon" class="quotes__icon">
             <div class="quotes__text">{{ testimonial.text }}</div>
-            <div class="quotes__author">{{ testimonial.author.name }}<span class="testimonials__location">, {{ testimonial.author.location }}</span></div>
+            <div class="quotes__author">{{ testimonial.author.name }}<span class="quotes__location">, {{ testimonial.author.location }}</span></div>
         </div>
         <div class="quotes__separator"></div>
     {% endfor %}
