--- a/sass/imports/_promo.scss
+++ b/sass/imports/_promo.scss
@@ -1,61 +1,71 @@
 .promo {
   display: flex;
+  width: 100%;
 
-  &__image { 
-      flex: 1;
-      width: 0;
-      padding-bottom: 50px;
-      object-fit: cover;
-      background-color: $color_dark;
+  picture {
+    flex: 1;
+    width: 0;
+    padding-bottom: 50px;
+    object-fit: cover;
+    background-color: $color_dark;
+    img {
+        width: 100%;
+    }
   }
 
   &__message-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      margin-top: 50px;
-      flex: 1;
-      width: 0;
-      padding: 80px;
-      color: $color_default;
-      background-color: $color_active;
-      .no-webp & {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 50px;
+    flex: 1;
+    width: 0;
+    padding: 80px;
+    color: $color_default;
+    background-color: $color_active;
+    background-size: auto 400%;
+    background-position: center;
+    .no-webp & {
         background-image: $background_images_product;
-      }
-      .webp & {
+    }
+    .webp & {
         background-image: $background_images_product_opt;
-      }
-      background-size: auto 400%;
-      background-position: center;
+    }
   }
 
-  &__title { 
-      font-size: $font_size_xlarge;
-      @include smaller-than-tablet { font-size: $font_size_large; }
-  }
-
-  &__subtitle { 
+  &__title {
+    font-family: $font_family_primairy;
+    font-size: $font_size_xlarge;
+    font-weight: 700;
+    @include smaller-than-tablet {
       font-size: $font_size_large;
-      margin-top: 40px; 
-      margin-bottom: 40px;
-      @include smaller-than-tablet { font-size: $font_size_medium; }
+    }
+  }
+
+  &__subtitle {
+    font-size: $font_size_large;
+    margin-top: $spacing--unit*3;
+    margin-bottom: $spacing--unit*6;
+    @include smaller-than-tablet {
+      font-size: $font_size_medium;
+    }
   }
 
   @include smaller-than-tablet {
-      flex-direction: column;
-      &__image {
-          width: auto;
-          padding-bottom: 0;
-          max-height: 300px;
-      }
+    flex-direction: column;
+    &__image {
+      width: auto;
+      padding-bottom: 0;
+      max-height: 300px;
+    }
 
-      &__message-container {
-          width: auto;
-          margin-top: 0;
-          align-items: center;
-          text-align: center;
-          padding-left: 30px;
-          padding-right: 30px;
-      }
+    &__message-container {
+      width: auto;
+      margin-top: 0;
+      align-items: center;
+      text-align: center;
+      padding-left: 30px;
+      padding-right: 30px;
+    }
   }
 }
