--- a/components/footer.html
+++ b/components/footer.html
@@ -2,7 +2,7 @@
 <footer class="footer">
     <div class="footer__container">
         <a href="/">
-            {% set include_dict = {'image': site.params.logos.light, 'cssClass': 'footer_logo', 'alt': 'Planty logo'} %}
+            {% set include_dict = {'image': site.params.logos.light, 'cssClass': 'footer__logo', 'alt': 'Planty logo'} %}
             {% include "picture.html" %}
         </a>
         <ul class="footer__nav">
