--- a/sass/imports/_about.scss
+++ b/sass/imports/_about.scss
@@ -1,33 +1,54 @@
 .about {
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
 
   &__section {
     display: flex;
     max-width: 1000px;
     margin-top: -150px;
     margin-bottom: 300px;
-    &:nth-child(odd) { flex-direction: row-reverse; }
-    
+    overflow: hidden;
+    &:nth-child(odd) {
+      flex-direction: row-reverse;
+    }
+
     @include smaller-than-tablet {
       flex-direction: column !important;
+    }
+
+    picture {
+      max-width: 500px;
+      max-height: 500px;
+      object-fit: cover;
+      @include smaller-than-tablet {
+        max-height: 400px;
+        max-height: 400px;
+        min-width: 100%;
+        max-width: 0;
+      }
     }
   }
 
   &__section:nth-child(odd) & {
-    &__section-content-container { 
-      margin-right: 50px; 
-      @include smaller-than-tablet { margin-right: 0; }
+    &__section-content-container {
+      margin-right: 50px;
+      @include smaller-than-tablet {
+        margin-right: 0;
+      }
     }
   }
 
   &__section:nth-child(even) & {
-    &__section-content-container { 
+    &__section-content-container {
       margin-left: 50px;
-      @include smaller-than-tablet { margin-left: 0; }
+      @include smaller-than-tablet {
+        margin-left: 0;
+      }
     }
   }
 
-  &__section:nth-last-of-type(2) { margin-bottom: 75px; }
+  &__section:nth-last-of-type(2) {
+    margin-bottom: 75px;
+  }
 
   &__section-content-container {
     display: flex;
@@ -36,13 +57,13 @@
   }
 
   &__section-title {
-    font-family: 'Open Sans', sans-serif;
-    font-size: $font_size_xlarge;
-    margin-bottom: 20px;
+    font-family: $font_family_primairy;
+    font-size: 42px;
+    margin-bottom: $spacing--unit*3;
     color: $color_dark_grey;
     margin-top: 75px;
-    @include smaller-than-tablet { 
-      margin-top: 50px; 
+    @include smaller-than-tablet {
+      margin-top: 50px;
       margin-bottom: 30px;
       font-size: $font_size_medium;
     }
