--- a/sass/imports/_buttons.scss
+++ b/sass/imports/_buttons.scss
@@ -1,47 +1,91 @@
 .button {
-    font-family: 'Open Sans', sans-serif;
-    width: fit-content;
-    font-weight: bold;
-    font-size: $font_size_medium;
-    border: none;
-    background-color: $color_default;
-    padding: 0.5em;
-    margin: 0;
-    border-radius: 5px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
+  font-family: $font_family_primairy;
+  width: fit-content;
+  font-weight: bold;
+  font-size: $font_size_medium;
+  border: none;
+  background-color: $color_default;
+  padding: 0.5em;
+  margin: 0;
+  border-radius: 8px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+
+  &:hover {
+    background-color: $color_active;
+    svg path {
+      fill: $color_default;
+    }
+  }
+
+  &:active {
+    background-color: $color_active_medium;
+    outline: none;
+  }
+
+  &__icon {
+    padding: 0 0.5em;
+  }
+  &__text {
+    padding: 0 0.5em;
+  }
+
+  &--icon-only {
+    width: $spacing--unit * 6;
+    height: $spacing--unit * 6;
+  }
+
+  &--transparent {
+    background-color: transparent;
     &:hover {
-        background-color: $color_active;
-        svg path { fill: $color_default; }
+      background-color: transparent;
+      svg path {
+        fill: $color_active_medium;
+      }
     }
-
     &:active {
-        background-color: $color_active_medium;
-        outline: none;
+      background-color: transparent;
+    }
+  }
+
+  &--std {
+    background-color: $color_active;
+    color: $color_default;
+    svg {
+      width: 18px;
+      height: 18px;
+    }
+    svg path {
+      fill: $color_default;
+    }
+    &:hover {
+      background-color: $color_active_medium;
+    }
+    &:active {
+      background-color: $color_active_dark;
+    }
+  }
+
+  &--large-icon {
+    padding-left: $spacing--unit*3;
+    padding-right: $spacing--unit*3;
+  }
+
+  &--large-icon & {
+    &__text {
+        margin-left: $spacing--unit*2;
     }
 
-    
-    &__icon { padding: 0 0.5em; }
-    &__text { padding: 0 0.5em; }
-    
-    &--icon-only { width: 40px; height: 40px; }
-
-    &--transparent {
-        background-color: transparent;
-        &:hover {
-            background-color: transparent;
-            svg path { fill: $color_active_medium; }
-        }
-        &:active { background-color: transparent; }
+    &__icon {
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
-
-    &--std {
-        background-color: $color_active;
-        color: $color_default;
-        svg      { width: 18px; height: 18px; }
-        svg path { fill: $color_default; }
-        &:hover  { background-color: $color_active_medium; }
-        &:active { background-color: $color_active_dark; }
+    &__icon svg {
+        height: $spacing--unit*3;
+        width: $spacing--unit*3;
     }
+  }
 }
