--- a/sass/imports/_fonts.scss
+++ b/sass/imports/_fonts.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,900&display=swap');
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: $font_family_secondary;
     font-size: $font_size_regular;
 }
