--- a/sass/imports/_nav.scss
+++ b/sass/imports/_nav.scss
@@ -1,104 +1,134 @@
 .nav {
-    font-family: 'Open Sans', sans-serif;
+  font-family: $font_family_primairy;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  &__button {
     width: 100%;
-    margin: 0 auto;
-    display: flex;
+    padding-right: 0;
+    justify-content: flex-end;
     align-items: center;
-    justify-content: space-between;
+  }
 
-    &__button {
-        width: 100%;
-        padding-right: 0;
-        justify-content: flex-end;
-        align-items: center;
+  &__menu {
+    @include smaller-than-tablet {
+      display: none;
     }
+    margin: 0;
+    display: grid;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-    &__menu {
-        @include smaller-than-tablet { display: none; }
-        margin: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 50%;
+  &__menu-item {
+    margin: 0;
+    font-size: $font_size_regular;
+    font-weight: bold;
+    list-style: none;
+    &:not(:last-child) {
+      margin-right: $spacing--unit * 5;
     }
+  }
 
+  &__menu-item-link {
+    color: inherit;
+    text-decoration: none;
+  }
 
-    &__menu-item {
-        margin: 0;
-        padding: 0 2em;
-        font-size: $font_size_regular;
-        font-weight: bold;
-        list-style: none;
+  &__logo {
+    width: 25%;
+  }
+  &__logo-image {
+    height: 45px;
+  }
+  &__total-items {
+    @include smaller-than-tablet {
+      display: none;
     }
+    font-weight: bold;
+    color: inherit;
+    font-size: $font_size_regular;
+    padding-left: 0;
+  }
 
-    &__menu-item-link {
-        color: inherit;
-        text-decoration: none;
-    }
+  &__right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    text-align: right;
+  }
 
-    &__logo { width: 25%; }
-    &__logo-image { 
-        height: 45px;
+  &--dark {
+    color: $color_dark;
+    .hamburger__icon-path {
+      fill: $color_dark;
     }
+  }
+  &--dark & {
     &__total-items {
-        @include smaller-than-tablet { display: none; }
-        font-weight: bold;
-        color: inherit;
-        font-size: $font_size_regular;
-        padding-left: 0;
+      color: $color_dark;
     }
+    &__button-icon {
+      display: flex;
+      svg {
+        path {
+          fill: $color_dark;
+        }
+      }
+    }
+  }
 
-    &__right {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: auto;
-        text-align: right;
+  &--light {
+    color: $color_light;
+    .hamburger__icon-path {
+      fill: $color_light;
     }
-
-    &--dark {
-        color: $color_dark; 
-        .hamburger__icon-path { fill: $color_dark; }
+  }
+  &--light & {
+    &__total-items {
+      color: $color_light;
     }
-    &--dark & {
-        &__total-items {color: $color_dark;}
-        &__button-icon { svg { path { fill: $color_dark; } } }
+    &__button-icon {
+      svg {
+        path {
+          fill: $color_light;
+        }
+      }
     }
-
-    &--light { 
-        color: $color_light;
-        .hamburger__icon-path { fill: $color_light; }
-    }
-    &--light & {
-        &__total-items {color: $color_light;}
-        &__button-icon { svg { path { fill: $color_light; } } }
-    }
+  }
 }
 
 .header {
-    @include container-item-properties;
-    position: relative;
-    z-index: 10;
-    padding-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    @include smaller-than-tablet { padding-top: 25px; }
+  @include container-item-properties;
+  position: relative;
+  z-index: 10;
+  padding-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  @include smaller-than-tablet {
+    padding-top: 25px;
+  }
 }
 
 .header-wrapper {
-    &__overlay {
-        background: radial-gradient(at 35% top, rgba(black, 0.35), rgba(black, 0.25));
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-    }
+  &__overlay {
+    background: radial-gradient(at 35% top, rgba(#1e2222, 0.7), rgba(#1e2222, 0.3));
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
 
-    .no-webp & {
-        background-image: $background_images_primary;
-    }
-    .webp & {
-        background-image: $background_images_primary_opt;
-    }
-    background-repeat: no-repeat;
-    background-size: cover;
+  .no-webp & {
+    background-image: $background_images_primary;
+  }
+  .webp & {
+    background-image: $background_images_primary_opt;
+  }
+  background-repeat: no-repeat;
+  background-size: cover;
 }
