--- a/sass/imports/_product.scss
+++ b/sass/imports/_product.scss
@@ -1,7 +1,7 @@
 .product {
     display: grid;
     grid-template-columns: auto repeat(5, minmax(50px, 260px)) auto;
-    grid-template-rows: 210px 4fr 1fr;
+    grid-template-rows: 210px $spacing--unit*64 $spacing--unit*9;
     margin-top: -110px;
 
     &__background-left-overlay {
@@ -12,7 +12,7 @@
         @include smaller-than-tablet { 
             grid-column: 1 / 8;
             grid-row: 1 / 3;
-            margin-bottom: 30%;
+            margin-bottom: 20%;
         }
     }
 
@@ -29,7 +29,7 @@
         @include smaller-than-tablet { 
             grid-column: 1 / 8;
             grid-row: 1 / 3;
-            margin-bottom: 30%;
+            margin-bottom: 20%;
         }
     }
 
@@ -44,7 +44,8 @@
             background-image: $background_images_secondary_opt;
         }
         background-size: auto 250%;
-        background-position: center;
+        background-position: calc(50% + 200px) 50%;
+        background-position-y: -650px;
         @include smaller-than-tablet { display: none; }
     }
 
@@ -60,11 +61,6 @@
         text-transform: uppercase;
 
         margin-bottom: 50px;
-    }
-
-    &__back-to-store-link {
-        color: $color_default;
-        svg { margin-right: 10px; }
     }
     
     &__details {
@@ -85,13 +81,13 @@
     }
 
     &__figure {
-        display: block;
+        display: flex;
+        align-items: center;
         grid-column: 2 / 4;
         grid-row: 2 / 3;
         @include smaller-than-tablet {
             grid-column: 2 / 7;
             grid-row: 2;
-            display: flex;
             justify-content: center;
         }
     }
@@ -103,17 +99,17 @@
         object-fit: cover;
         box-shadow: -72px 36px 56px rgba(0, 0, 0, 0.14);
         border-radius: 8px;
-        max-width: 400px;
+        max-width: 100%;
         @include smaller-than-tablet { 
-            width: 200px;
+            max-width: 400px;
             height: auto;
         }
     }
 
     &__title {
-        font-family: 'Open Sans', sans-serif;
+        font-family: $font_family_primairy;
         font-weight: bold;
-        font-size: $font_size_xlarge;
+        font-size: 42px;
         margin-bottom: 20px;
         color: $color_dark_grey;
         
@@ -123,7 +119,8 @@
     }
 
     &__category {
-        font-family: 'Open Sans', sans-serif;
+        font-weight: 600;
+        font-family: $font_family_primairy;
         text-transform: uppercase;
         font-size: $font_size_medium;
         margin-bottom: 25px;
@@ -134,10 +131,10 @@
     }
 
     &__price {
-        font-family: 'Open Sans', sans-serif;
-        margin-bottom: 25px;
+        font-family: $font_family_primairy;
+        margin-bottom: $spacing--unit*5;
         font-size: $font_size_large;
-        font-weight: bold;
+        font-weight: 600;
         color: $color_dark_grey;
 
         @include smaller-than-tablet { 
@@ -149,10 +146,8 @@
         font-size: $font_size_regular;
         color: $color_medium;
         margin-bottom: 20px;
-
-        @include smaller-than-tablet { 
-            font-size: $font_size_regular;
-        }
+        line-height: 150%;
+        @include smaller-than-tablet { font-size: $font_size_regular; }
     }
 
     &__back-to-store {
@@ -160,22 +155,32 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 150px;
-        color: $color_default;
+        height: $spacing--unit*13;
         background-color: $color_active;
+        font-size: $spacing--unit*2;  
+        color: white;      
         .no-webp & {
             background-image: $background_images_product;
         }
         .webp & {
             background-image: $background_images_product_opt;
         }
-        background-size: auto 500%;
+        background-size: auto 700%;
         background-position: center;
 
         svg { 
             margin: 0;
             margin-right: 10px;
             height: 26px;
+        }        
+    }
+
+    &__back-to-store-link {
+        color: white;
+        font-weight: 400;
+        font-size: $spacing--unit*2;
+        svg {
+            margin-right: $spacing--unit*2;
         }
     }
 
@@ -188,7 +193,7 @@
         grid-template-rows: 210px 1fr auto; 
         button {
             width: 100%; 
-            display: flex;
+            display: flex; 
             justify-content: center;
             align-items: center;
         }
