--- a/sass/imports/_store.scss
+++ b/sass/imports/_store.scss
@@ -1,6 +1,6 @@
 .store {
     &__title {
-        font-family: 'Open Sans', sans-serif;
+        font-family: $font_family_primairy;
         font-size: $font_size_xlarge;
         line-height: 60px;
         @include smaller-than-tablet { 
@@ -21,8 +21,8 @@
     }
     
     &__head {
-        margin-top: 50px;
-        margin-bottom: 50px;
+        margin-top: $spacing--unit*8;
+        margin-bottom: $spacing--unit*10;
         justify-content: space-between;
     }
 
@@ -30,13 +30,13 @@
         flex: 1;
         height: fit-content;
         position: relative;
-        background-color: $color_light;
-        border-radius: 0px 24px 24px 0px;
+        background-color: #F6F6F6;
+        border-radius: 0px $spacing--unit*3 $spacing--unit*3 0px;
         margin-right: 50px;
         &:before {
             content: "";
-            border-radius: 0px 24px 24px 0px;
-            background-color: $color_light;
+            border-radius: 0px $spacing--unit*3 $spacing--unit*3 0px;
+            background-color: #F6F6F6;
             position: absolute;
             height: 100%;
             width: 100vw;
@@ -61,9 +61,9 @@
 
     &__nav-items {
         list-style-type: none;
-        margin-top: 30px;
-        margin-bottom: 30px;
-        margin-right: 30px;
+        margin-top: $spacing--unit*5;
+        margin-bottom: $spacing--unit*5;
+        margin-right: $spacing--unit*5;
         @include smaller-than-tablet { margin: 0; }
     }
 
@@ -82,8 +82,9 @@
 
     &__nav-item-link {
         display: inline-block;
-        font-family: 'Open Sans', sans-serif;
+        font-family: $font_family_primairy;
         font-weight: normal;
+        font-size: $font_size_regular;
         width: 100%;
         @include smaller-than-tablet {
             font-size: $font_size_regular;
@@ -105,5 +106,11 @@
     &__products {
         width: 100%;
         max-width: 1000px;
+    }
+
+    &__product-grid {
+        .product-grid__item {
+            margin-bottom: $spacing--unit*4.5;
+        }
     }
 }
