--- a/templates/faq.html
+++ b/templates/faq.html
@@ -22,7 +22,8 @@
         <p class="faq__contact-address">226 rue St-Joseph E, Québec, QC, Canada, G1K 3A9</p>
         <p class="faq__contact-telephone">+1-202-555-0112</p>
         <p class="faq__contact-email">geeks@snipcart.com</p>
-        <a class="faq__map-link link link--filled" href="https://goo.gl/maps/g6za62bN9BHrNTVt5">
+        <div class="faq__seperator"></div>
+        <a class="faq__map-link link link--filled link--reversed" href="https://goo.gl/maps/g6za62bN9BHrNTVt5">
           On the map
           <svg width="17" height="24" viewBox="0 0 17 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M8.25031 0C3.67589 0 0 3.67445 0 8.25031C0 12.8247 8.25031 24 8.25031 24C8.25031 24 16.5006 12.8247 16.5006 8.25031C16.5006 3.67445 12.8247 0 8.25031 0ZM8.25031 11.9993C6.15084 11.9993 4.49991 10.3498 4.49991 8.24888C4.49991 6.1494 6.1494 4.49847 8.25031 4.49847C10.3498 4.49847 12.0007 6.14796 12.0007 8.24888C12.0007 10.3498 10.3498 11.9993 8.25031 11.9993Z" fill="white"/>
