--- a/components/featured_products.html
+++ b/components/featured_products.html
@@ -1,20 +1,19 @@
+{% set product_pages = include_dict.product_pages %}
 <ul class="product-grid product-grid--draggable">
-    {% set products = include_dict.products %}
-
-    {% for product in products %}
+    {% for product_page in product_pages %}
         <li class="product-grid__item">
-            <figure data-href="{{ product.url | relative_url }}" class="js-figure-link product-grid__item-figure js-figure-link">
-                {% set include_dict = {'image': product.images.featured.thumbnail, 'alt': product.title, 'cssClass': 'product-grid__item-image product-grid__item-image--featured'} %}
+            <figure data-href="{{ product_page.url | relative_url }}" class="js-figure-link product-grid__item-figure js-figure-link">
+                {% set include_dict = {'image': product_page.params.images.featured.thumbnail, 'alt': product_page.title, 'cssClass': 'product-grid__item-image product-grid__item-image--featured'} %}
                 {% include "picture.html" %}
                 <figcaption>
-                    {% set include_dict= {'product': product, 'component': 'product-grid'} %}
+                    {% set include_dict = {'product_page': product_page, 'component': 'product-grid'} %}
                     {% include "small_buy_button.html" %}
                 </figcaption>
             </figure>
             <div class="product-grid__definition">
-                <h3 class="product-grid__title"> <a href="{{ product.url | relative_url }}"> {{ product.title }} </a> </h3>
-                <span class="product-grid__category"> {{ product.category }} </span>
-                <span class="product-grid__price"> ${{ product.price }} </span>
+                <h3 class="product-grid__title"> <a href="{{ product_page.url | relative_url }}"> {{ product_page.title }} </a> </h3>
+                <span class="product-grid__category"> {{ product_page.params.category }} </span>
+                <span class="product-grid__price"> ${{ product_page.params.price }} </span>
             </div>
         </li>
     {% endfor %}
