--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,6 @@
-{% set menu = include_dict.menu %}
+{% set page = include_dict.page %}
+{% set site = include_dict.site %}
+{% set menu = site.menus.main %}
 <footer class="footer">
     <div class="footer__container">
         <a href="/">
@@ -6,7 +8,7 @@
             {% include "picture.html" %}
         </a>
         <ul class="footer__nav">
-            {% for item in menu%}
+            {% for item in menu %}
             <li class="footer__nav-item">
                 <a href="{{ item.url | relative_url }}" {% if item.title == page.title %}class="footer__nav-link footer__nav-link--active" {% else %}class="footer__nav-link"{% endif %}>
                 {{ item.title }}
