--- a/components/nav_categories.html
+++ b/components/nav_categories.html
@@ -1,7 +1,9 @@
+{% set site = include_dict.site %}
+{% set page = include_dict.page %}
 <ul class="store__nav-items">
     {% for item in site.menus.categories %}
-        {% set category = include_dict.page %}
-        {% set isActive = true if category and category.title == item.title else false %}
+        {% set isCurrentPage = page.title == item.title %}
+        {% set isActive = true if isCurrentPage else false %}
         <li class="store__nav-item">
             <a href="{{ item.url | relative_url }}" {{ classNames('store__nav-item-link', {'store__nav-item-link--active': isActive}) }}>
                 {{ item.title }}
