--- a/components/static_header.html
+++ b/components/static_header.html
@@ -1,7 +1,7 @@
 {% set page = include_dict.page %}
 <section class="content__row content__row--bleed static-header__header">
-  <h1 class="static-header__title content__row">{{ page.headline }}</h1>
+  <h1 class="static-header__title content__row">{{ page.params.headline }}</h1>
   <div class="content__row static-header__content">
-    {{ page.introduction | markdownify }}
+    {{ page.params.introduction | markdownify }}
   </div>
 </section>
