--- a/layouts/product.html
+++ b/layouts/product.html
@@ -1,6 +1,6 @@
 {% extends "body.html" %}
 {% block content %}
-    {% set category = getPages('/categories') | where('slug', page.category) | first %}
+    {% set category_page = getPages('/category') | where('slug', page.params.category) | first %}
     <main class="content">
         <section class="product content__row content__row--bleed">  
             <div class="product__background-left-overlay"></div>
@@ -15,7 +15,7 @@
                 </a>
             </div>
             <figure class="product__figure">
-                {% set include_dict = {'image': page.images.default.original, 'alt': product.title, 'cssClass': 'product__image'} %}
+                {% set include_dict = {'image': page.params.images.default.original, 'alt': page.title, 'cssClass': 'product__image'} %}
                 {% include "picture.html" %}
             </figure>
             <div class="product__details">
@@ -23,25 +23,25 @@
                     {{ page.title }}
                 </h1>
                 <h2 class="product__category"> 
-                    <a href="{{ category.url | relative_url }}"> {{ category.title }} </a>
+                    <a href="{{ category_page.url | relative_url }}"> {{ category_page.title }} </a>
                 </h2>
                 <div class="product__price">
-                    ${{ page.price }}
+                    ${{ page.params.price }}
                 </div>
 
                 <article class="product__description">
-                    {{ page.description }}
+                    {{ page.params.description }}
                 </article>
 
-                {% set include_dict = {'product': page} %}
+                {% set include_dict = {'product_page': page} %}
                 {% include "buy_button.html" %}
             </div>
         </section>
 
         <section class="content__row">
             <h2 class="content__row-title">Related</h2>
-            {% set products = getPages('/products') | where('category', category.slug) | sort_array('title', 'asc') | where('id', '!=', page.id) %}
-            {% set include_dict = {'products': products, 'cssClass': 'product-grid--draggable'} %}
+            {% set product_pages = getPages('/products') | where('category', category_page.params.slug) | sort_array('title', 'asc') | where('id', '!=', page.params.id) %}
+            {% set include_dict = {'product_pages': product_pages, 'cssClass': 'product-grid--draggable'} %}
             {% include "product_grid.html" %}
         </section>
 
