--- a/layouts/body.html
+++ b/layouts/body.html
@@ -18,4 +18,5 @@
 
     {% set include_dict = {'page': page,'site': site} %}
     {% include "footer.html" %}
+    {% include "snipcart_templates.html" %}
 {% endblock %}
